--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-
     <!-- Start og meta -->
     <!-- Primary Meta Tags -->
     <title>4th</title>
@@ -26,9 +24,7 @@
     <!-- Meta Tags Generated with https://metatags.io -->
     <!-- End og meta-->
 
-
-
-    <link rel="shortcut icon" type="x-icon" href="">
+    <link rel="shortcut icon" type="x-icon" href="images/main-image-logo.png">
     <!-- Main Template CSS File -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Render All Elements Normally -->
@@ -43,6 +39,8 @@
         rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>I'm ahmed aly fayyad</h1>
+    </div>
 </body>
 </html>
