--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://ahmedalyfayyad.github.io/4th-html-and-css/" />
     <meta property="og:title" content="Sara" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="https://ahmedalyfayyad.github.io/4th-html-and-css/images/ts-1.jpg"/>
+    <meta property="og:image" content="https://ahmedalyfayyad.github.io/4th-html-and-css/images/ts-1.jpg" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ahmedalyfayyad.github.io/4th-html-and-css/" />
@@ -27,8 +27,8 @@
 
     <link rel="shortcut icon" type="x-icon" href="images/main-image-logo.png">
     <!-- Main Template CSS File -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/framework.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Render All Elements Normally -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome Library -->
@@ -40,9 +40,71 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
-    <div class="container">
-        <h1>I'm ahmed aly fayyad</h1>
+    <div class="page d-flex">
+        <div class="sidebar bg-black p-20 p-relative">
+            <a href="index.html"><img src="images/logo-tp (1).png" alt="Logo" style="width: 40px;"></a>
+            <h3 class="p-relative txt-c mt-0 mb-20 c-red">molatham</h3>
+            <ul>
+                <li>
+                    <a class="active d-flex align-center fs-14 c-gold rad-8 p-10" href="index.html">
+                        <i class="fa-regular fa-chart-bar fa-fw"></i>
+                        <span class="txt-tf-c">dashboard</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="d-flex align-center fs-14 c-gold rad-8 p-10" href="settings.html">
+                        <i class="fa-solid fa-gear fa-fw"></i>
+                        <span class="txt-tf-c">setting</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="d-flex align-center fs-14 c-gold rad-8 p-10" href="profile.html">
+                        <i class="fa-regular fa-user fa-fw"></i>
+                        <span class="txt-tf-c">projects</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="d-flex align-center fs-14 c-gold rad-8 p-10" href="projects.html">
+                        <i class="fa-solid fa-diagram-project fa-fw"></i>
+                        <span class="txt-tf-c">projects</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="d-flex align-center fs-14 c-gold rad-8 p-10" href="courses.html">
+                        <i class="fa-solid fa-graduation-cap fa-fw"></i>
+                        <span class="txt-tf-c">courses</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="d-flex align-center fs-14 c-gold rad-8 p-10" href="friends.html">
+                        <i class="fa-regular fa-circle-user fa-fw"></i>
+                        <span class="txt-tf-c">friends</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="d-flex align-center fs-14 c-gold rad-8 p-10" href="files.html">
+                        <i  class="fa-regular fa-file fa-fw"></i>
+                        <span class="txt-tf-c">files</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="d-flex align-center fs-14 c-gold rad-8 p-10" href="plans.html">
+                        <i class="fa-regular fa-credit-card fa-fw"></i>
+                        <span class="txt-tf-c">plans</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="content w-full">
+            <!-- Start Head -->
+             <div class="head bg-black p-20 d-flex align-center space-between">
+
+             </div>
+            <!-- End Head -->
+        </div>
     </div>
 </body>
+
 </html>
