--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,7 +86,7 @@
                 </li>
                 <li>
                     <a class="d-flex align-center fs-14 c-gold rad-8 p-10" href="files.html">
-                        <i  class="fa-regular fa-file fa-fw"></i>
+                        <i class="fa-regular fa-file fa-fw"></i>
                         <span class="txt-tf-c">files</span>
                     </a>
                 </li>
@@ -99,9 +100,17 @@
         </div>
         <div class="content w-full">
             <!-- Start Head -->
-             <div class="head bg-black p-20 d-flex align-center space-between">
-
-             </div>
+            <div class="head bg-black p-15 between-flex">
+                <div class="search p-relative">
+                    <input class="p-10" type="search" placeholder="Type A Keyword" />
+                </div>
+                <div class="icons d-flex align-center">
+                    <span class="notification p-relative">
+                        <i class="fa-regular fa-bell fa-lg"></i>
+                    </span>
+                    <img decoding="async" src="images/main-sq-80px.jpg" alt="" />
+                </div>
+            </div>
             <!-- End Head -->
         </div>
     </div>
