added welcome widget

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <!-- Start og meta -->
     <!-- Primary Meta Tags -->
-    <title>4th</title>
-    <meta name="title" content="4th" />
+    <title>Molatham</title>
+    <meta name="title" content="Molatham" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ahmedalyfayyad.github.io/4th-html-and-css/" />
@@ -112,6 +112,29 @@
                 </div>
             </div>
             <!-- End Head -->
+            <h1 class="p-relative">dashboard</h1>
+            <div class="wrapper d-grid gap-20">
+                <!-- Start Welcome Widget -->
+                <div class="welcome bg-black rad-10 txt-c-mobile block-mobile">
+                    <div class="intro p-20 d-flex space-between bg-red-alt">
+                        <div>
+                            <h2>welcome</h2>
+                            <p class="c-gold-alt mt-5 txt-tf-uc">molatham</p>
+                        </div>
+                        <img class="hide-mobile" src="images/wel.png" alt="welcome">
+                    </div>
+                    <div class="body txt-c d-flex p-20 mt-20 mb-20 txt-tf-c">
+                        <div class="mr-10">fayyad <span class="d-block c-sub fs-14">developer</span></div>
+                        <div class="mr-10">91 <span class="d-block c-sub fs-14">projects</span></div>
+                        <div class="mr-10">$23000 <span class="d-block c-sub fs-14">earned</span></div>
+                    </div>
+                    <a href="profile.html" class="visit d-block fs-14 bg-gold c-black w-fit btn-shape">profile</a>
+                </div>
+                <!-- End Welcome Widget -->
+                <!-- End Quick Draft Widget -->
+                
+                <!-- Start Quick Draft Widget -->
+            </div>
         </div>
     </div>
 </body>
