added quick draft widget

--- a/index.html
+++ b/index.html
@@ -128,11 +128,19 @@
                         <div class="mr-10">91 <span class="d-block c-sub fs-14">projects</span></div>
                         <div class="mr-10">$23000 <span class="d-block c-sub fs-14">earned</span></div>
                     </div>
-                    <a href="profile.html" class="visit d-block fs-14 bg-gold c-black w-fit btn-shape">profile</a>
+                    <a href="profile.html" class="visit d-block bg-gold c-black w-fit btn-shape">profile</a>
                 </div>
                 <!-- End Welcome Widget -->
                 <!-- End Quick Draft Widget -->
-                
+                <div class="quick-draft txt-tf-c p-20  bg-red-alt rad-10">
+                    <h2 class="mt-0 mb-10">quick-draft</h2>
+                    <p class="c-gold-alt mt-5 mb-20 txt-tf-uc">write a draft for your ideas</p>
+                    <form action="">
+                        <input class="d-block mb-20 w-full p-10 b-none" type="text" placeholder="Title">
+                        <textarea class="d-block mb-20 w-full p-10 b-none" placeholder="Your Thought"></textarea>
+                        <input class="save d-block" type="submit" value="save">
+                    </form>
+                </div>
                 <!-- Start Quick Draft Widget -->
             </div>
         </div>
