added some widgets

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <h2>welcome</h2>
                             <p class="c-gold-alt mt-5 txt-tf-uc">molatham</p>
                         </div>
-                        <img class="hide-mobile" src="images/wel.png" alt="welcome">
+                        <img class="hide-mobile" src="images/dog-1.png" alt="welcome">
                     </div>
                     <div class="body txt-c d-flex p-20 mt-20 mb-20 txt-tf-c">
                         <div class="mr-10">fayyad <span class="d-block c-sub fs-14">developer</span></div>
@@ -142,6 +142,192 @@
                     </form>
                 </div>
                 <!-- Start Quick Draft Widget -->
+                <!-- Start Target Widget -->
+                <div class="target txt-tf-c p-20 bg-red-alt rad-10">
+                    <h2 class="mt-0 mb-10">yearly targets</h2>
+                    <p class="c-gold-alt mt-5 mb-20 txt-tf-uc">targets of the year</p>
+                    <div class="target-row mb-20 center-flex">
+                        <div class="icon center-flex mr-10">
+                            <i class="fa-solid fa-dollar-sign fa-lg bg-red-3"></i>
+                        </div>
+                        <div class="details">
+                            <span class="">money</span>
+                            <span class="d-block mt-5 mb-10 fw-bold">$20.000</span>
+                            <div class="progress p-relative bg-black">
+                                <span class="bg-red" style="width:90%">
+                                    <span class="bg-black">90%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="target-row mb-20 center-flex">
+                        <div class="icon center-flex mr-10">
+                            <i class="fa-solid fa-code fa-lg bg-red-3"></i>
+                        </div>
+                        <div class="details">
+                            <span class="">projects</span>
+                            <span class="d-block mt-5 mb-10 fw-bold">24</span>
+                            <div class="progress p-relative bg-black">
+                                <span class="bg-red" style="width:55%">
+                                    <span class="bg-black">55%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="target-row mb-20 center-flex">
+                        <div class="icon center-flex mr-10">
+                            <i class="fa-solid fa-user fa-lg bg-red-3"></i>
+                        </div>
+                        <div class="details">
+                            <span class="">team</span>
+                            <span class="d-block mt-5 mb-10 fw-bold">21</span>
+                            <div class="progress p-relative bg-black">
+                                <span class="bg-red" style="width:75%">
+                                    <span class="bg-black">75%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                </div>
+                <!-- End Target Widget -->
+                <!-- Start Tickets Widget -->
+                <div class="tickets txt-tf-c p-20 bg-red-alt rad-10">
+                    <h2 class="mt-0 mb-10">Tickets Statistics</h2>
+                    <p class="c-gold-alt mt-5 mb-20 txt-tf-uc">everything about support Tickets</p>
+                    <div class="d-flex txt-c gap-20 f-wrap">
+                        <div class="box p-20 rad-10 fs-13 ">
+                            <i class="fa-regular fa-rectangle-list fa-2x mb-10 fs-28"></i>
+                            <span class="d-block fw-bold fs-25 mb-5 fs-24">2500</span>
+                            Total
+                        </div>
+                        <div class="box p-20 rad-10 fs-13">
+                            <i class="fa-solid fa-spinner fa-2x mb-10 "></i>
+                            <span class="d-block fw-bold fs-25 mb-5 fs-24">500</span>
+                            pending
+                        </div>
+                        <div class="box p-20 rad-10 fs-13">
+                            <i class="fa-regular fa-circle-check fa-2x mb-10 "></i>
+                            <span class="d-block fw-bold fs-25 mb-5 fs-24">1900</span>
+                            closed
+                        </div>
+                        <div class="box p-20 rad-10 fs-13">
+                            <i class="fa-regular fa-rectangle-xmark fa-2x mb-10 "></i>
+                            <span class="d-block fw-bold fs-25 mb-5 fs-24">100</span>
+                            deleted
+                        </div>
+                        <div class="line"></div>
+                    </div>
+                </div>
+                <!-- Start Tickets Widget -->
+                <!-- Start Latest Widget -->
+                <div class="latest-news txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile">
+                    <h2 class="mt-0 mb-20">latest news</h2>
+                    <div class="news-row d-flex align-center ">
+                        <img src="images/ln-u5.jpg" alt="">
+                        <div class="info">
+                            <h3>Masked Hero Spotted</h3>
+                            <p class="m-0 fs-14 c-gold-alt">Seen patrolling city streets.</p>
+                        </div>
+                        <div class="btn-shape fs-13 label c-black">3 days ago</div>
+                    </div>
+                    <div class="news-row d-flex align-center ">
+                        <img src="images/ln-u2.jpg" alt="">
+                        <div class="info">
+                            <h3>Identity Uncovered</h3>
+                            <p class="m-0 fs-14 c-gold-alt">Thwarts attempted bank heist.</p>
+                        </div>
+                        <div class="btn-shape fs-13 label c-black">5 days ago</div>
+                    </div>
+                    <div class="news-row d-flex align-center ">
+                        <img src="images/ln-u3.jpg" alt="">
+                        <div class="info">
+                            <h3>Masked Saves Day</h3>
+                            <p class="m-0 fs-14 c-gold-alt">New masked vigilante emerges.</p>
+                        </div>
+                        <div class="btn-shape fs-13 label c-black">8 days ago</div>
+                    </div>
+                    <div class="news-row d-flex align-center ">
+                        <img src="images/ln-u4.jpg" alt="">
+                        <div class="info">
+                            <h3>New Masked Vigilante</h3>
+                            <p class="m-0 fs-14 c-gold-alt">Prevents major robbery in the city.</p>
+                        </div>
+                        <div class="btn-shape fs-13 label c-black">9 days ago</div>
+                    </div>
+                </div>
+                <!-- Start Latest Widget -->
+                <!-- Start Tasks Widget -->
+                <div class="tasks txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile">
+                    <h2 class="mt-0 mb-10">latest tasks</h2>
+                    <div class="line head"></div>
+                    <div class="task-row between-flex">
+                        <div class="info">
+                            <h3 class="mb-5">Secure Warehouse</h3>
+                            <p class="m-0 fs-14 c-gold-alt">Ensure the safety of a valuable shipment.</p>
+                        </div>
+                        <i class="fa-regular fa-trash-can delete"></i>
+                    </div>
+                    <div class="task-row between-flex">
+                        <div class="info">
+                            <h3 class="mb-5">Rescue Hostages</h3>
+                            <p class="m-0 fs-14 c-gold-alt">Free captives from a hidden location.</p>
+                        </div>
+                        <i class="fa-regular fa-trash-can delete"></i>
+                    </div>
+                    <div class="task-row between-flex done">
+                        <div class="info">
+                            <h3 class="mb-5">Surveillance Setup</h3>
+                            <p class="m-0 fs-14 c-gold-alt">Install cameras in a high-risk area.</p>
+                        </div>
+                        <i class="fa-regular fa-trash-can delete"></i>
+                    </div>
+                    <div class="task-row between-flex">
+                        <div class="info">
+                            <h3 class="mb-5">Intercept Message</h3>
+                            <p class="m-0 fs-14 c-gold-alt">Retrieve and decode a secret transmission.</p>
+                        </div>
+                        <i class="fa-regular fa-trash-can delete"></i>
+                    </div>
+                    <div class="task-row between-flex">
+                        <div class="info">
+                            <h3 class="mb-5">Patrol Route</h3>
+                            <p class="m-0 fs-14 c-gold-alt">Monitor and protect a designated city sector.</p>
+                        </div>
+                        <i class="fa-regular fa-trash-can delete"></i>
+                    </div>
+                </div>
+                <!-- End Tasks Widget -->
+                <!-- Start Search Items Widget -->
+                <div class="search-items txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile">
+                    <h2 class="mt-0 mb-10">top search items</h2>
+                    <div class="line head"></div>
+                    <div class="items-head d-flex space-between mb-20">
+                        <div>keyword</div>
+                        <div>search count</div>
+                    </div>
+                    <div class="items d-flex space-between c-gold-alt">
+                        <span>Masked Vigilante</span>
+                        <span class="fs-13 btn-shape">1500</span>
+                    </div>
+                    <div class="items d-flex space-between c-gold-alt">
+                        <span>Hero Sightings </span>
+                        <span class="fs-13 btn-shape">1200</span>
+                    </div>
+                    <div class="items d-flex space-between c-gold-alt">
+                        <span>Crime Prevention</span>
+                        <span class="fs-13 btn-shape">950</span>
+                    </div>
+                    <div class="items d-flex space-between c-gold-alt">
+                        <span>Masked Identity</span>
+                        <span class="fs-13 btn-shape">800</span>
+                    </div>
+                    <div class="items d-flex space-between c-gold-alt">
+                        <span>Surveillance Footage </span>
+                        <span class="fs-13 btn-shape">700</span>
+                    </div>
+                </div>
+                <!-- End Search Items Widget -->
             </div>
         </div>
     </div>
