added quick draft widget

--- a/index.html
+++ b/index.html
@@ -328,6 +328,86 @@
                     </div>
                 </div>
                 <!-- End Search Items Widget -->
+                <!-- Start Latest Upload Widget -->
+                <div class="latest-uploads txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile">
+                    <h2 class="mt-0 mb-20">latest upload</h2>
+                    <ul class="m-0">
+                        <li class="between-flex pb-10 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="images/f-avi.svg" alt="">
+                                <div>
+                                    <span class="d-block">surveillance_log.avi</span>
+                                    <span class="fs-15 fw-bold">John</span>
+                                </div>
+                            </div>
+                            <div>
+                                2.9mb
+                            </div>
+                        </li>
+                        <li class="between-flex pb-10 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="images/f-dll.svg" alt="">
+                                <div>
+                                    <span class="d-block">crime_scene.dll</span>
+                                    <span class="fs-15 fw-bold">Lisa</span>
+                                </div>
+                            </div>
+                            <div>
+                                5.3mb
+                            </div>
+                        </li>
+                        <li class="between-flex pb-10 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="images/f-eps.svg" alt="">
+                                <div>
+                                    <span class="d-block ">patrol_route.eps</span>
+                                    <span class="fs-15 fw-bold">sara</span>
+                                </div>
+                            </div>
+                            <div>
+                                7.22mb
+                            </div>
+                        </li>
+                        <li class="between-flex pb-10 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="images/f-pdf.svg" alt="">
+                                <div>
+                                    <span class="d-block">vigilante_report.pdf</span>
+                                    <span class="fs-15 fw-bold">Emma</span>
+                                </div>
+                            </div>
+                            <div>
+                                1.9mb
+                            </div>
+                        </li>
+                        <li class="between-flex pb-10 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="images/f-png.svg" alt="">
+                                <div>
+                                    <span class="d-block">masked_hero.png</span>
+                                    <span class="fs-15 fw-bold">Alex</span>
+                                </div>
+                            </div>
+                            <div>
+                                8.9mb
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <!-- End Latest Upload Widget -->
+                <!-- Start Last Project Widget -->
+                <div class="last-project txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile p-relative ">
+                    <h2 class="mt-0 mb-20">latest upload</h2>
+                    <ul class="m-0 p-relative">
+                        <li class="mt-25 d-flex align-center done">got the project</li>
+                        <li class="mt-25 d-flex align-center done">started the project</li>
+                        <li class="mt-25 d-flex align-center done">the project about to finish</li>
+                        <li class="mt-25 d-flex align-center current">test the project</li>
+                        <li class="mt-25 d-flex align-center">finish the project & get money</li>
+                    </ul>
+                    <img src="images/bird.png" alt="">
+                </div>
+                <!-- End Last Project Widget -->
             </div>
         </div>
     </div>
