finshed dashboard page

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <!-- End og meta-->
 
     <link rel="shortcut icon" type="x-icon" href="images/main-image-logo.png">
-    <!-- Main Template CSS File -->
-    <link rel="stylesheet" type="text/css" href="css/framework.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Render All Elements Normally -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Main Template CSS File -->
+    <link rel="stylesheet" type="text/css" href="css/framework.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +45,7 @@
 <body>
     <div class="page d-flex">
         <div class="sidebar bg-black p-20 p-relative">
-            <a href="index.html"><img src="images/logo-tp (1).png" alt="Logo" style="width: 40px;"></a>
+            <a href="index.html"> <img src="images/logo-tp (1).png" alt="Logo" style="width: 40px;"></a>
             <h3 class="p-relative txt-c mt-0 mb-20 c-red">molatham</h3>
             <ul>
                 <li>
@@ -397,18 +397,196 @@
                 <!-- End Latest Upload Widget -->
                 <!-- Start Last Project Widget -->
                 <div class="last-project txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile p-relative ">
-                    <h2 class="mt-0 mb-20">latest upload</h2>
+                    <h2 class="mt-0 mb-20">Last Project Progress</h2>
                     <ul class="m-0 p-relative">
-                        <li class="mt-25 d-flex align-center done">got the project</li>
-                        <li class="mt-25 d-flex align-center done">started the project</li>
-                        <li class="mt-25 d-flex align-center done">the project about to finish</li>
-                        <li class="mt-25 d-flex align-center current">test the project</li>
-                        <li class="mt-25 d-flex align-center">finish the project & get money</li>
+                        <li class="mt-45 d-flex align-center done">got the project</li>
+                        <li class="mt-45 d-flex align-center done">started the project</li>
+                        <li class="mt-45 d-flex align-center done">the project about to finish</li>
+                        <li class="mt-45 d-flex align-center current">test the project</li>
+                        <li class="mt-45 d-flex align-center">finish the project & get money</li>
                     </ul>
                     <img src="images/bird.png" alt="">
                 </div>
                 <!-- End Last Project Widget -->
+                <!-- Start Reminders Widget -->
+                <div class="reminders txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile">
+                    <h2 class="mt-0 mb-20">Reminders</h2>
+                    <ul class="m-0">
+                        <li class="d-flex align-center mt-15">
+                            <span class="key mr-15 d-block rad-half"></span>
+                            <div class="pl-15 color">
+                                <p class="fs-16 fw-bold mt-0 mb-5">Meeting with Team</p>
+                                <span class="fs-13">Date: 2024-07-15, Time: 10:00 AM</span>
+                            </div>
+                        </li>
+                        <li class="d-flex align-center mt-15">
+                            <span class="key mr-15 d-block rad-half"></span>
+                            <div class="pl-15 color">
+                                <p class="fs-16 fw-bold mt-0 mb-5">Submit Report</p>
+                                <span class="fs-13">Date: 2024-07-16, Time: 03:00 PM</span>
+                            </div>
+                        </li>
+                        <li class="d-flex align-center mt-15">
+                            <span class="key mr-15 d-block rad-half"></span>
+                            <div class="pl-15 color">
+                                <p class="fs-16 fw-bold mt-0 mb-5">Client Presentation</p>
+                                <span class="fs-13">Date: 2024-07-17, Time: 11:30 AM</span>
+                            </div>
+                        </li>
+                        <li class="d-flex align-center mt-15">
+                            <span class="key mr-15 d-block rad-half"></span>
+                            <div class="pl-15 color">
+                                <p class="fs-16 fw-bold mt-0 mb-5">Code Review</p>
+                                <span class="fs-13">Date: 2024-07-18, Time: 02:00 PM</span>
+                            </div>
+                        </li>
+                        <li class="d-flex align-center mt-15">
+                            <span class="key mr-15 d-block rad-half"></span>
+                            <div class="pl-15 color">
+                                <p class="fs-16 fw-bold mt-0 mb-5">Project Deadline</p>
+                                <span class="fs-13">Date: 2024-07-19, Time: 05:00 PM</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <!-- End Reminders Widget -->
+                <!-- Start Posts Widget -->
+                <div class="latest-post txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile">
+                    <h2 class="mt-0 mb-20">latest post</h2>
+                    <div class="top d-flex align-center">
+                        <img class="rad-half avater mr-15" src="images/ln-4.jpg" alt="">
+                        <div class="info">
+                            <span class="d-block mb-5 fw-bold">fayyad</span>
+                            <span class="c-gold-alt fs-13">about 3hours ago</span>
+                        </div>
+                    </div>
+                    <div class="post-content tet-c-mobile pt-20 pb-20 mt-20 mb-20 c-gold-alt">
+                        I recently encountered a mysterious masked figure in the city.
+                        The way they handled the situation was truly impressive.
+                        Has anyone else seen this hero in action? Share your stories and thoughts!
+                    </div>
+                    <div class="post-stats between-flex">
+                        <div>
+                            <i class="fa-regular fa-heart"></i>
+                            <span>1.3K</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-comments"></i>
+                            <span>343</span>
+                        </div>
+                    </div>
+                    <div class="post-content tet-c-mobile pt-20 pb-20 mt-20 mb-20 mt-5 c-gold-alt">
+                        everything is ok
+                        just smile
+                    </div>
+                    <div class="post-stats between-flex">
+                        <div>
+                            <i class="fa-regular fa-heart"></i>
+                            <span>2.9K</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-comments"></i>
+                            <span>421</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Posts Widget -->
+                <!-- Start Social Media Widget -->
+                <div class="social-media txt-tf-c p-20 bg-red-alt rad-10 txt-c-mobile p-relative">
+                    <h2 class="mt-0 mb-25">social media</h2>
+                    <div class="box twitter p-15 p-relative mb-10 between-flex">
+                        <i class="fa-brands fa-twitter fa-2x h-full center-flex"></i>
+                        <span><span class="fw-bold">545K</span> followers</span>
+                        <a href="" class="fa-13 btn-shape">follow</a>
+                    </div>
+                    <div class="box facebook p-15 p-relative mb-10 between-flex">
+                        <i class="fa-brands fa-facebook fa-2x h-full center-flex"></i>
+                        <span><span class="fw-bold">911K</span> followers</span>
+                        <a href="" class="fa-13 btn-shape">like</a>
+                    </div>
+                    <div class="box youtube p-15 p-relative mb-10 between-flex">
+                        <i class="fa-brands fa-youtube fa-2x h-full center-flex"></i>
+                        <span><span class="fw-bold">2M</span> followers</span>
+                        <a href="" class="fa-13 btn-shape">subscribe</a>
+                    </div>
+                    <div class="box linkedin p-15 p-relative mb-10 between-flex">
+                        <i class="fa-brands fa-linkedin fa-2x h-full center-flex"></i>
+                        <span><span class="fw-bold">34K</span> followers</span>
+                        <a href="" class="fa-13 btn-shape">contact</a>
+                    </div>
+                    <img src="images/gun-1.png" alt="" style="width: 280px; opacity:.8; margin: 0px 180px">
+                </div>
+                <!-- Start Social Media Widget -->
             </div>
+                            <!-- Start Project Table Widget -->
+                            <div class="projects p-20 bg-red-alt m-20 rad-10 c-gold">
+                                <h2 class="mt-0 mb-25">projects table</h2>
+                                <div class="responsive-table">
+                                    <table class="fa-15 w-full">
+                                        <thead class="fw-bold">
+                                            <tr>
+                                                <td>name</td>
+                                                <td>finish date</td>
+                                                <td>client</td>
+                                                <td>price</td>
+                                                <td>team</td>
+                                                <td>status</td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>Vigilante Tracker</td>
+                                                <td>2024-07-20</td>
+                                                <td>Sarah Johnson</td>
+                                                <td>$5000</td>
+                                                <td>team</td>
+                                                <td>In Progress</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Surveillance Network</td>
+                                                <td>2024-08-15</td>
+                                                <td>Emma Davis</td>
+                                                <td> $6000</td>
+                                                <td>team</td>
+                                                <td>Completed</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Crime Mapping</td>
+                                                <td>2024-07-30</td>
+                                                <td>John</td>
+                                                <td>$7500</td>
+                                                <td>team</td>
+                                                <td>Pending</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Masked Identity Database</td>
+                                                <td>2024-08-05</td>
+                                                <td>Alex Brown</td>
+                                                <td> $8000</td>
+                                                <td>team</td>
+                                                <td> In Progress</td>
+                                            </tr>
+                                            <tr>
+                                                <td> Incident Reporting App</td>
+                                                <td>2024-07-25</td>
+                                                <td> Lisa Wilson</td>
+                                                <td>$5500</td>
+                                                <td>team</td>
+                                                <td>Completed</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Patrol Schedule System</td>
+                                                <td>2024-08-10</td>
+                                                <td>Michael Lee</td>
+                                                <td>$7000</td>
+                                                <td>team</td>
+                                                <td>Pending</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!-- End Project Table Widget -->
         </div>
     </div>
 </body>
